# harmonius

./: .clangd  .cmake-format.py  .gitignore  .gitmodules  .ignore  .rumdl.toml  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Cargo.toml  LICENSE.md  Package.resolved  Package.swift  README.md  build.zig  build.zig.zon  package.json  project.yml  pyproject.toml  rewrap.py  tsconfig.json  vcpkg-configuration.json  vcpkg.json
app/: CMakeLists.txt  Info-iOS.plist  Info.plist
app/AssetSources/AppIcon.icon/: icon.json
app/Assets.xcassets/AppIcon.appiconset/: Contents.json
app/Assets.xcassets/LaunchBackground.colorset/: Contents.json
app/HarmoniusApp/: ContentView.swift  HarmoniusApp.swift  HarmoniusLaunchOptions.swift  HarmoniusRenderTests.swift  MetalView.swift  SnapshotImageTesting.swift
app/HarmoniusAppLib/: ContentView.swift  HarmoniusApp.swift  MetalView.swift
app/HarmoniusRendering/: Metal4PipelineSupport.swift  Metal4TriangleRenderer.swift  MetalTriangleRenderer.swift  TestingEntryPoint.swift  TriangleGeometry.swift  TriangleGeometryTests.swift
app/NativeMetal/: Metal4PipelineSupport.swift
app/Resources/AppIcon.icon/: icon.json
app/Shaders/: NSEnum.h  ShaderTypes.h  SwiftCompat.h  Triangle.metal  Triangle.slang  module.modulemap
crates/containers_slots_rendering/: Cargo.toml
crates/containers_slots_rendering/src/: attachment_transform.rs  lib.rs  preview_debug.rs  render_layers.rs  snap_hysteresis.rs  visual_binding.rs  visual_override.rs
crates/core_runtime/: Cargo.toml
crates/core_runtime/src/: convar.rs  error.rs  ids.rs  lib.rs  primitives.rs  sorted_vec_map.rs
crates/core_runtime/tests/: entity_stable_id_policy.rs  io_protocol.rs
crates/grids_volumes_physics/: Cargo.toml
crates/grids_volumes_physics/src/: lib.rs  los.rs  occupancy.rs  types.rs
crates/grids_volumes_physics/tests/: tc_ir_3_10_5_2_propagation.rs
crates/harmonius-integration-ai-data-tables/: Cargo.toml
crates/harmonius-integration-ai-data-tables/src/: bindings_system.rs  blackboard.rs  bt.rs  cache.rs  component_store.rs  events.rs  goap.rs  ids.rs  lib.rs  table.rs  trace.rs  utility.rs  world.rs
crates/harmonius-integration-ai-data-tables/tests/: ir_cases.rs
crates/harmonius-integration-ai-sa/: Cargo.toml
crates/harmonius-integration-ai-sa/src/: awareness.rs  blackboard.rs  budget.rs  lib.rs  perception.rs  types.rs
crates/harmonius-integration-ai-sa/tests/: ai_spatial_integration.rs
crates/harmonius-integration-audio-sa/: Cargo.toml
crates/harmonius-integration-audio-sa/src/: amortization.rs  channel.rs  entity.rs  lib.rs  material.rs  propagation.rs  snapshot.rs  spatial_audio.rs  spatial_index.rs  store.rs  system.rs  voice.rs
crates/harmonius-integration-audio-sa/tests/: audio_sa_integration.rs
crates/harmonius-localization/: Cargo.toml  README.md
crates/harmonius-localization/src/: error.rs  lib.rs  missing_log.rs  registry.rs  search.rs  service.rs
crates/harmonius_ai/: Cargo.toml
crates/harmonius_ai/src/: blackboard.rs  bt.rs  debug_trace.rs  goap.rs  lib.rs  subtree.rs  utility.rs
crates/harmonius_ai/tests/: tc_behavior.rs
crates/harmonius_ai_grids/: Cargo.toml
crates/harmonius_ai_grids/benches/: ai_grids_bench.rs
crates/harmonius_ai_grids/src/: blackboard.rs  coord.rs  drain.rs  entity.rs  flow.rs  goap.rs  hierarchical.rs  influence.rs  lib.rs  math.rs  propagation.rs  uniform.rs  utility.rs  voxel.rs
crates/harmonius_ai_grids/tests/: ir_cases.rs
crates/harmonius_app/: Cargo.toml  build.rs
crates/harmonius_app/src/: main.rs  shaders.rs
crates/harmonius_app/tests/: triangle_integration.rs
crates/harmonius_asset_build/: Cargo.toml
crates/harmonius_asset_build/src/: bundle.rs  cas.rs  channels.rs  cook.rs  delta.rs  incremental.rs  lib.rs  merkle.rs  platform.rs  shader.rs  types.rs
crates/harmonius_camera/: Cargo.toml
crates/harmonius_camera/src/: blend.rs  brain.rs  cinematic.rs  collision.rs  extensions.rs  group.rs  ids.rs  input.rs  intelligence.rs  lib.rs  mixer.rs  orbital.rs  position.rs  rotation.rs  shake.rs  third_person.rs  types.rs
crates/harmonius_composition/: Cargo.toml
crates/harmonius_composition/benches/: composition.rs
crates/harmonius_composition/src/: asset_id.rs  bind_error.rs  components.rs  definition_asset.rs  definitions.rs  determinism.rs  events.rs  lib.rs  phase.rs  primitive_kind.rs  recipe.rs  recipes.rs  snapshot.rs
crates/harmonius_composition/tests/: composition_tests.rs
crates/harmonius_containers/: Cargo.toml
crates/harmonius_containers/src/: container.rs  drag_drop.rs  entity.rs  equipment.rs  grid.rs  lib.rs  nesting.rs  socket.rs  sort.rs  stats.rs  tags.rs  transfer.rs  validate.rs
crates/harmonius_containers/tests/: tc_containers_slots.rs
crates/harmonius_containers_slots_ui/: Cargo.toml
crates/harmonius_containers_slots_ui/src/: binding.rs  bridge.rs  entity.rs  filter_sort.rs  lib.rs  split.rs  transfer.rs  types.rs
crates/harmonius_content/: Cargo.toml
crates/harmonius_content/src/: asset_binary.rs  audio_flac.rs  audio_wav.rs  auto_resolve.rs  batch_import.rs  bundle.rs  cas.rs  coordinator.rs  data_table.rs  dep_graph.rs  editor_sync.rs  file_watch.rs  handle_table.rs  headless_batch.rs  import_cache.rs  lib.rs  logic_graph.rs  material_mapper.rs  metadata.rs  native_format.rs  pipeline.rs  progress.rs  shader_reload.rs  structural_diff.rs  subasset.rs  tc.rs  texture_decode.rs  three_way_merge.rs  thumbnail.rs  ui_reload.rs  validation.rs  version_store.rs  visual_inspector.rs
crates/harmonius_core/: Cargo.toml  README.md  build.rs
crates/harmonius_core/src/: error.rs  job.rs  lib.rs  math.rs  plan_memory_async_io_tests.rs
crates/harmonius_crash_reporting/: Cargo.toml
crates/harmonius_data_tables/: Cargo.toml
crates/harmonius_event_logs_ui/: Cargo.toml
crates/harmonius_game/: Cargo.toml
crates/harmonius_gpu/: Cargo.toml
crates/harmonius_graph/: Cargo.toml
crates/harmonius_input/: Cargo.toml
crates/harmonius_integration_animation_physics/: Cargo.toml
crates/harmonius_integration_animation_rendering/: Cargo.toml
(+3182 files in other folders)
