[workspace]
members = [
  "crates/content_services",
  "crates/editor_rendering",
  "crates/grids_volumes_physics",
  "crates/harmonius-build-deploy",
  "crates/harmonius-integration-benches",
  "crates/harmonius-integration-tests",
  "crates/harmonius_app",
  "crates/harmonius_asset_build",
  "crates/harmonius_containers",
  "crates/harmonius_containers_slots_ui",
  "crates/harmonius_core",
  "crates/harmonius_data_systems",
  "crates/harmonius_data_tables",
  "crates/harmonius_directed_graphs",
  "crates/harmonius_editor",
  "crates/harmonius_editor_core",
  "crates/harmonius_event_logs",
  "crates/harmonius_event_logs_ui",
  "crates/harmonius_game",
  "crates/harmonius_gpu",
  "crates/harmonius_gpu_runtime",
  "crates/harmonius_integration",
  "crates/harmonius_integration_editor_physics",
  "crates/harmonius_integration_rendering_camera",
  "crates/harmonius_integration_rendering_geometry",
  "crates/harmonius_integration_rendering_grids_volumes",
  "crates/harmonius_integration_rendering_physics",
  "crates/harmonius_integration_rendering_scripting",
  "crates/harmonius_integration_rendering_vfx",
  "crates/harmonius_net",
  "crates/harmonius_physics",
  "crates/harmonius_platform",
  "crates/harmonius_profiler",
  "crates/harmonius_rendering_core",
  "crates/harmonius_save",
  "crates/harmonius_save_integration",
  "crates/harmonius_scripting",
  "crates/harmonius_scripting_data_tables_integration",
  "crates/harmonius_shared_messaging_capacities",
  "crates/harmonius_sim",
  "crates/harmonius_team_tools",
  "crates/harmonius_timelines_scripting",
  "crates/harmonius_ui",
  "crates/harmonius_undo",
  "crates/harmonius_vfx",
  "crates/integration-scripting-ui",
  "crates/integration_ai_animation",
  "crates/integration_attributes_effects_physics",
  "crates/integration_input_camera",
  "crates/integration_networking_save",
  "crates/integration_physics_spatial",
  "crates/integration_timelines_camera",
  "crates/integration_ui_physics",
  "crates/net-physics",
  "crates/render-effects",
  "crates/rendering_ui",
  "crates/save_system_profiler",
  "crates/scene_versioning",
  "crates/timelines_audio_integration",
  "crates/visual_editors",
]
resolver = "3"
