[workspace]
resolver = "3"
members = [
  "crates/console_sdk",
  "crates/console_stub",
  "crates/console_target",
  "crates/content_services",
  "crates/editor_rendering",
  "crates/grids_volumes_physics",
  "crates/harmonius-build-deploy",
  "crates/harmonius-integration-benches",
  "crates/harmonius-integration-tests",
  "crates/harmonius-localization",
  "crates/harmonius_ai",
  "crates/harmonius_ai_grids",
  "crates/harmonius_app",
  "crates/harmonius_asset_build",
  "crates/harmonius_camera",
  "crates/harmonius_containers",
  "crates/harmonius_containers_slots_ui",
  "crates/harmonius_core",
  "crates/harmonius_data_systems",
  "crates/harmonius_data_tables",
  "crates/harmonius_directed_graphs",
  "crates/harmonius_editor",
  "crates/harmonius_editor_core",
  "crates/harmonius_editor_core_runtime",
  "crates/harmonius_event_logs",
  "crates/harmonius_event_logs_ui",
  "crates/harmonius_game",
  "crates/harmonius_gpu",
  "crates/harmonius_gpu_runtime",
  "crates/harmonius_gpu_runtime_test",
  "crates/harmonius_integration",
  "crates/harmonius_integration_animation_physics",
  "crates/harmonius_integration_animation_rendering",
  "crates/harmonius_integration_audio_physics",
  "crates/harmonius_integration_editor_animation",
  "crates/harmonius_integration_editor_physics",
  "crates/harmonius_integration_rendering_camera",
  "crates/harmonius_integration_rendering_geometry",
  "crates/harmonius_integration_rendering_grids_volumes",
  "crates/harmonius_integration_rendering_physics",
  "crates/harmonius_integration_rendering_scripting",
  "crates/harmonius_integration_rendering_vfx",
  "crates/harmonius_net",
  "crates/harmonius_physics",
  "crates/harmonius_platform",
  "crates/harmonius_profiler",
  "crates/harmonius_rendering_core",
  "crates/harmonius_save",
  "crates/harmonius_save_integration",
  "crates/harmonius_scripting",
  "crates/harmonius_scripting_data_tables_integration",
  "crates/harmonius_serialize",
  "crates/harmonius_shared_messaging_capacities",
  "crates/harmonius_sim",
  "crates/harmonius_team_tools",
  "crates/harmonius_timelines_scripting",
  "crates/harmonius_ui",
  "crates/harmonius_undo",
  "crates/harmonius_vfx",
  "crates/input_ui",
  "crates/integration-localization-ui",
  "crates/integration-scripting-ui",
  "crates/integration_ai_animation",
  "crates/integration_ai_event_logs",
  "crates/integration_attributes_effects_physics",
  "crates/integration_input_camera",
  "crates/integration_networking_save",
  "crates/integration_physics_geometry",
  "crates/integration_physics_spatial",
  "crates/integration_timelines_camera",
  "crates/integration_ui_physics",
  "crates/net-physics",
  "crates/networking_ecs",
  "crates/platform-telemetry",
  "crates/render-effects",
  "crates/rendering_camera",
  "crates/rendering_ui",
  "crates/save_system_profiler",
  "crates/scene_versioning",
  "crates/selection_model",
  "crates/simulation_phases",
  "crates/timelines_audio_integration",
  "crates/visual_editors",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.80"

[workspace.dependencies]
ash = "0.38"
bitflags = "2.9"
crossbeam-channel = "0.5"
crossbeam-utils = "0.8"
glam = "0.29"
harmonius_core = { path = "crates/harmonius_core" }
harmonius_gpu = { path = "crates/harmonius_gpu" }
harmonius_gpu_runtime = { path = "crates/harmonius_gpu_runtime" }
harmonius_platform = { path = "crates/harmonius_platform" }
naga = { version = "24", features = ["glsl-in", "spv-out"] }
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = [
  "NSApplication",
  "NSWindow",
  "NSView",
] }
objc2-foundation = { version = "0.3", features = ["NSString", "NSGeometry"] }
objc2-quartz-core = { version = "0.3", features = ["CAMetalLayer"] }
raw-window-handle = "0.6"
thiserror = "2.0"
x11rb = { version = "0.13", features = ["allow-unsafe-code", "libc"] }

[profile.release]
lto = "thin"
