[workspace]
resolver = "3"
members = [
  "crates/harmonius_app",
  "crates/harmonius_core",
  "crates/harmonius_data_tables",
  "crates/harmonius_gpu",
  "crates/harmonius_gpu_runtime",
  "crates/harmonius_integration",
  "crates/harmonius_integration_editor_physics",
  "crates/harmonius_integration_rendering_camera",
  "crates/harmonius_integration_rendering_geometry",
  "crates/harmonius_integration_rendering_grids_volumes",
  "crates/harmonius_integration_rendering_physics",
  "crates/harmonius_integration_rendering_vfx",
  "crates/harmonius_net",
  "crates/harmonius_platform",
  "crates/harmonius_save",
  "crates/harmonius_save_integration",
  "crates/harmonius_scripting_data_tables_integration",
  "crates/harmonius_shared_messaging_capacities",
  "crates/harmonius_undo",
  "crates/integration-scripting-ui",
  "crates/integration_input_camera",
  "crates/integration_timelines_camera",
  "crates/integration_ui_physics",
  "crates/render-effects",
  "crates/rendering_ui",
  "crates/save_system_profiler",
  "crates/timelines_audio_integration",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.80"

[workspace.dependencies]
ash = "0.38"
bitflags = "2.9"
crossbeam-channel = "0.5"
crossbeam-utils = "0.8"
glam = "0.29"
harmonius_core = { path = "crates/harmonius_core" }
harmonius_gpu = { path = "crates/harmonius_gpu" }
harmonius_gpu_runtime = { path = "crates/harmonius_gpu_runtime" }
harmonius_platform = { path = "crates/harmonius_platform" }
naga = { version = "24", features = ["glsl-in", "spv-out"] }
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = [
  "NSApplication",
  "NSWindow",
  "NSView",
] }
objc2-foundation = { version = "0.3", features = ["NSString", "NSGeometry"] }
objc2-quartz-core = { version = "0.3", features = ["CAMetalLayer"] }
raw-window-handle = "0.6"
thiserror = "2.0"
x11rb = { version = "0.13", features = ["allow-unsafe-code", "libc"] }

[profile.release]
lto = "thin"
