[project]
name = "harmonius-scripts"
requires-python = ">=3.13"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
  "A",
  "ANN",
  "B",
  "C4",
  "E",
  "F",
  "FA",
  "I",
  "N",
  "PIE",
  "PT",
  "RET",
  "RUF",
  "SIM",
  "T20",
  "UP",
  "W",
]

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["T20"]

[tool.mypy]
python_version = "3.13"
disallow_untyped_defs = true
strict = true
warn_return_any = true
warn_unused_configs = true
