[package]
authors = ["Harmonius Contributors"]
description = "Containers/slots and rendering integration helpers (transforms, layers, snap hysteresis)"
edition = "2021"
license = "Apache-2.0"
name = "containers_slots_rendering"
repository = "https://github.com/cjhowe-us/harmonius"
rust-version = "1.80"
version = "0.1.0"

[dependencies]
glam = "0.29"

[lints.clippy]
all = "warn"

[lints.rust]
unsafe_code = "forbid"
