[package]
authors = ["Harmonius Contributors"]
description = "Audio and spatial-awareness integration: propagation, occlusion, and MPSC bridge."
edition = "2021"
license = "Apache-2.0"
name = "harmonius-integration-audio-sa"
repository = "https://github.com/cjhowe-us/harmonius"
version = "0.1.0"

[dependencies]
crossbeam-channel = "0.5"
glam = { version = "0.29", default-features = false, features = ["std"] }

[dev-dependencies]
rayon = "1.10"
