[package]
description = "Localization runtime: baked tables, locale switching, and string lookup"
edition = "2021"
license = "Apache-2.0"
name = "harmonius_localization"
readme = "README.md"
version = "0.1.0"

[dependencies]
rkyv = { version = "0.7", features = ["std", "validation"] }
tracing = "0.1"

[dev-dependencies]
tracing-test = "0.2"
