[package]
description = "Behavior trees, utility AI, and GOAP primitives for Harmonius"
edition = "2021"
name = "harmonius_ai"
version = "0.1.0"

[dependencies]
rand = { version = "0.8", features = ["small_rng"] }
ron = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lints.rust]
unsafe_code = "forbid"
