[package]
description = "AI navigation: NavMesh tiles, pathfinding, and related algorithms for Harmonius."
edition = "2021"
license = "MIT OR Apache-2.0"
name = "harmonius_ai"
repository = "https://github.com/cjhowe-us/harmonius"
version = "0.1.0"

[dependencies]
glam = { version = "0.29", default-features = false, features = ["std"] }
smallvec = { version = "1.13", default-features = false, features = ["const_generics"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "allow"
