[package]
description = "Steering and crowd simulation primitives for Harmonius (design-aligned)."
edition = "2021"
license = "MIT OR Apache-2.0"
name = "harmonius_ai"
rust-version = "1.78"
version = "0.1.0"

[dependencies]
# ORCA velocity solve delegated to `dodgy_2d` (approved for PLAN-ai-steering-crowds); matches
# `solve_orca` contract in `docs/design/ai/steering-crowds.md`.
dodgy_2d = "0.5.5"
glam = "0.29"
ordered-float = "4.2"
rand = "0.8"
smallvec = "1.13"
