[package]
name = "harmonius_ai_grids"
version = "0.1.0"
edition = "2021"
publish = false
description = "AI behavior integration with grids and volumes (IR-2.3.x)"

[lib]
bench = false

[dependencies]
crossbeam-channel = "0.5.15"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
harness = false
name = "ai_grids_bench"
