[package]
name = "harmonius_app"
description = "Harmonius bootstrap triangle demo"
publish = false

edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "harmonius_app"
path = "src/main.rs"

[dependencies]
crossbeam-channel.workspace = true
harmonius_core.workspace = true
harmonius_gpu.workspace = true
harmonius_platform.workspace = true

[build-dependencies]
naga.workspace = true
