[package]
description = "Asset pipeline ↔ build/deploy integration contracts and deterministic helpers"
edition = "2021"
license = "Apache-2.0"
name = "harmonius_asset_build"
version = "0.0.1"

[dependencies]
blake3 = "1.8"
crossbeam-channel = "0.5"
parking_lot = "0.12"
rkyv = { version = "0.8.9", features = ["std", "bytecheck"] }
