[package]
authors = ["Harmonius Contributors"]
description = "Container, grid, stacking, socket, and transfer validation primitives"
edition = "2021"
license = "Apache-2.0"
name = "harmonius_containers"
repository = "https://github.com/cjhowe-us/harmonius"
rust-version = "1.80"
version = "0.1.0"

[dependencies]
fixedbitset = "0.5"
glam = "0.29"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
