[package]
authors = ["Harmonius Contributors"]
description = "Containers/slots UI integration types and deterministic bridge helpers"
edition = "2024"
license = "MIT OR Apache-2.0"
name = "harmonius_containers_slots_ui"
repository = "https://github.com/cjhowe-us/harmonius"
rust-version = "1.85"
version = "0.1.0"

[dependencies]
smallvec = "1.15"

[lints.clippy]
all = "warn"

[lints.rust]
unsafe_code = "forbid"
