[package]
description = "Core engine primitives including scene transforms and hierarchy"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "harmonius_core"
repository = "https://github.com/cjhowe-us/harmonius"
version = "0.1.0"

[dependencies]
glam = { version = "0.29", default-features = false, features = ["serde", "std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smallvec = { version = "1.13", default-features = false, features = ["const_generics", "union"] }
