[package]
authors = ["Harmonius Contributors"]
description = "Core memory management and platform I/O primitives for Harmonius"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "harmonius_core"
readme = "README.md"
repository = "https://github.com/cjhowe-us/harmonius"
rust-version = "1.85"
version = "0.0.1"

[dependencies]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "deny"
