[package]
authors = ["Harmonius Contributors"]
description = "Crash reporting: minidump metadata, symbol indexing, clustering, and monitor IPC"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "harmonius_crash_reporting"
repository = "https://github.com/cjhowe-us/harmonius"
version = "0.1.0"

[dependencies]
blake3 = "1.8"
memmap2 = "0.9"
serde = { features = ["derive"], version = "1.0" }
serde_json = "1.0"
smallvec = { version = "1.15" }
thiserror = "2.0"
url = "2.5"

[dev-dependencies]
tempfile = "3.23"

[[bin]]
name = "harmonius_crashmon"
path = "src/bin/harmonius_crashmon.rs"
