[package]
name = "harmonius_data_tables"
version = "0.1.0"
edition = "2021"
description = "Schema-driven typed data tables for Harmonius gameplay data"
license = "MIT OR Apache-2.0"

[dependencies]
bumpalo = "3.19.0"
ron = "0.10.1"
serde = { version = "1.0.219", features = ["derive"] }
smallvec = "1.15.1"
smol_str = "0.3.2"
thiserror = "2.0.12"
