[package]
authors = ["Harmonius Contributors"]
description = "Event logs ↔ UI integration types and deterministic bridge helpers"
edition = "2021"
license = "Apache-2.0"
name = "harmonius_event_logs_ui"
repository = "https://github.com/cjhowe-us/harmonius"
rust-version = "1.85"
version = "0.1.0"

[dependencies]
harmonius_event_logs = { path = "../harmonius_event_logs" }
rkyv = { version = "0.7", features = ["validation"] }
smallvec = { version = "1.15", default-features = false, features = ["const_generics"] }
smol_str = "0.2"

[lints.clippy]
all = "warn"
