[package]
description = "Gameplay-facing simulation modules for Harmonius (spatial awareness, selection)."
edition = "2021"
license = "Apache-2.0"
name = "harmonius_game"
repository = "https://github.com/cjhowe/harmonius"
version = "0.1.0"

[dependencies]
glam = { version = "0.29", default-features = false, features = ["std"] }

[lints.clippy]
all = { level = "deny", priority = -1 }

[lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"
