[package]
name = "harmonius_gpu"
description = "Vulkan GPU backend for the Harmonius engine"
publish = false

edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
ash.workspace = true
bitflags.workspace = true
harmonius_core.workspace = true
harmonius_gpu_runtime.workspace = true
harmonius_platform.workspace = true
raw-window-handle.workspace = true
thiserror.workspace = true
