[package]
name = "harmonius_input"
version = "0.1.0"
edition = "2024"
description = "Input device abstraction, action mapping, gestures, haptics, and VR input (PLAN-input-input)"
license = "MIT OR Apache-2.0"

[dependencies]
glam = { version = "0.29", default-features = false, features = ["std"] }
smallvec = { version = "1.15", default-features = false }

[dev-dependencies]
smallvec = { version = "1.15", default-features = false }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "deny"
