[package]
authors = ["Harmonius"]
description = "Animation–physics integration contracts (root motion, ragdoll data, clamps)."
edition = "2021"
license = "Apache-2.0"
name = "harmonius_integration_animation_physics"
repository = "https://github.com/cjhowe-us/harmonius"
rust-version = "1.85"
version = "0.1.0"

[dependencies]
glam = { version = "0.29.2", features = ["rkyv"] }
rkyv = { version = "0.7.45", default-features = false, features = [
  "size_32",
  "std",
  "validation",
] }
rkyv_derive = "0.7.45"
