[package]
description = "Animation ↔ rendering integration contracts (IR-1.4.x)"
edition = "2021"
license = "Apache-2.0"
name = "harmonius_integration_animation_rendering"
repository = "https://github.com/cjhowe-us/harmonius"
version = "0.1.0"

[dependencies]

[dev-dependencies]
criterion = "0.5"

[[bench]]
harness = false
name = "grouping_sort"
